# sake

./: Cargo.toml  README.md
src/: error.rs  exec.rs  lib.rs  script_encoding.rs  script_witness.rs  stack.rs  witness_carrier.rs
src/exec/: error.rs  op_checksig.rs  schnorr.rs  stack.rs
src/exec/sake_opcodes/: mod.rs  op_activated.rs  op_amount.rs  op_cat.rs  op_ccv.rs  op_csfs.rs  op_csfsv.rs  op_ctv.rs  op_sakesupported.rs  op_th.rs
src/exec/sake_opcodes/op_ccv/: exec.json
src/exec/sake_opcodes/op_ctv/: bip_0346.rs  test_vector.json
src/exec/sake_opcodes/op_th/: basic.json  script_assets_test.json
src/tests/: basic.rs
src/tests/helpers/: asm.rs
tests/: exec.rs  script_witness.rs  validate.rs  validate_and_sign.rs
tests/test_helpers/: asm.rs  mod.rs  parse.rs
