[package]
name = "sake"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { version = "0.32.5", features = ["rand-std"] }

[dev-dependencies]
proptest = "1.9.0"

bitcoin-script = { git = "https://github.com/Nuhvi/rust-bitcoin-script-sake.git" }

# OP_CTV test vectors
serde_json = "1.0.146"
bitcoin = { version = "=0.32.5", features = [ "serde" ] }
hex = "0.4.3"
serde = "1.0.228"
